[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
addopts = '--cov=.'
trio_mode = true
cache_dir = 'target/.pytest_cache'

[tool.coverage.run]
branch = true
data_file = 'target/.coverage'
omit = ['setup.py', 'tests/integration/deploy.py', 'venv/*']

[tool.coverage.html]
directory = 'target/coverage'

[tool.black]
line-length = 80
target-version = ['py38']
skip-string-normalization = true
# check = true

