[metadata]
name = aiven-monitor
version = attr: aiven_monitor.version.VERSION

[options]
package_dir =
    =src
packages = find:
install_requires =
    httpx[http2] == 0.16.*
    kafka-python
    psycopg2
    trio

[options.packages.find]
where = src
include = *

[options.extras_require]
speedups = crc32c

[options.entry_points]
console_scripts =
    aiven-monitor-checker = aiven_monitor.checker:main
    aiven-monitor-writer = aiven_monitor.writer:main
